Certificates - fix spacing on Required Courses

--- a/scss/templates/certificates/required-courses.scss
+++ b/scss/templates/certificates/required-courses.scss
@@ -240,6 +240,12 @@
           }
         }
       }
+
+      @include media-breakpoint-up(xl) {
+        .course-desc {
+          padding: 0.75rem 1.5rem;
+        }
+      }
     }
   }
 }
